[api] Update
Added support for the traces in Alloy 6